<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="36sp"
        android:textColor="#120000"
        android:fontFamily="sans-serif-medium"
        android:text="@string/registration"
        android:paddingBottom="24dp" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="24dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/editTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="12dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="12dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:hint="@string/age"
            android:inputType="number"
            android:padding="12dp"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/checkBoxReminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/i_would_like_to_be_reminded_about_future_workouts"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    </LinearLayout>


</LinearLayout>